# CV_PI5

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.c
src/apps/camera_trigger/: main.c
src/apps/save_clip/: main.c
